# sophon-tools

./: Cargo.toml
sophon-cli/: Cargo.toml
sophon-cli/src/: api_data.rs  download.rs  main.rs  pretty_print.rs  repair.rs  update.rs
sophon-lib/: Cargo.toml  build.rs
sophon-lib/src/: error.rs  game_edition.rs  installer.rs  lib.rs  repairer.rs  size_limited_queue.rs  updater.rs
sophon-lib/src/api/: mod.rs
sophon-lib/src/api/schemas/: game_branches.rs  game_configs.rs  game_scan_info.rs  mod.rs
sophon-lib/src/protos/: SophonManifest.proto  SophonPatch.proto  mod.rs
sophon-lib/src/utils/: file_check_cache.rs  hdiff_newfile.rs  hpatchz.rs  mod.rs  paimon.rs  read_reporter.rs  read_take_region.rs  version.rs
