[package]
name = "sophon-cli"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.47", features = ["derive"] }
dialoguer = "0.12.0"
indicatif = "0.18.0"
protobuf = "3.7.2"
protobuf-json-mapping = "3.7.2"
serde = "1.0.226"
serde_json = "1.0.145"
sophon-lib = { version = "0.1.0", path = "../sophon-lib" }
