[package]
name = "sophon-cli"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.47", features = ["derive"] }
dialoguer = "0.12.0"
indicatif = "0.18.0"
serde = "1.0.226"
serde_json = "1.0.145"
sophon-lib = { version = "0.1.0", path = "../sophon-lib", features = ["extra-logs"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tracing-tracy = { version = "0.11.4", optional = true}

[features]
default = []
tracy = ["dep:tracing-tracy"]
rust-hdiff = ["sophon-lib/paimon"]
