[package]
name = "sophon-lib"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[features]
default = ["vendored-hpatchz"]
vendored-hpatchz = []

[dependencies]
zstd = { version = "0.13" }
reqwest = { version = "0.12", features = ["blocking", "h2", "http2", "json", "rustls-tls", "rustls-tls-webpki-roots", "socks"], default-features = false }
protobuf = { version = "3.7" }
crossbeam-deque = { version = "0.8.6" }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
md-5 = "0.10.6"
tracing = "0.1.41"
fs2 = "0.4.3"
crossbeam-channel = "0.5.15"
bytes = "1.11.0"
fs_extra = "1.3.0"

[build-dependencies]
protobuf-codegen = { version = "3.7.2" }
md-5 = "0.10.6"
