[package]
name = "sophon-lib"
3ersion = "0.1.4"
edition = "2024"
license = "GPL-3.0"

[features]
default = ["vendored-hpatchz"]
vendored-hpatchz = []
paimon = ["dep:paimon"]
extra-logs = []

[dependencies]
zstd = { version = "0.13" }
reqwest = { version = "0.12", features = ["blocking", "h2", "http2", "json", "rustls-tls", "rustls-tls-webpki-roots", "socks"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
md-5 = "0.10.6"
tracing = "0.1.41"
fs2 = "0.4.3"
crossbeam-channel = "0.5.15"
bytes = "1.11.0"
fs_extra = "1.3.0"
prost = "0.14.3"
interprocess = "2.4.0"
rand = "0.10.0"
paimon = { git = "https://dawn.wine/lily/paimon", version = "0.1.0", optional = true }

[build-dependencies]
md-5 = "0.10.6"
prost-build = "0.14.3"
